src/blocks/footer.css
.footer {
  padding: 0;
  margin: 0;
}

.footer__copyright {
  margin: 0;
  text-align: center;
  padding: 60px 0;
  color: rgba(33, 33, 33, 0.7);
  line-height: 16px;
  font-size: 16px;
  font-weight: 400;
  display: flex;
  justify-content: center;
}

@media screen and (max-width: 627px) {
  .footer__copyright {
    max-width: 104px;
    margin: 0 auto;
  }
}

